[JENKINS-40533] Allow definition of sandboxed libraries at global scope